manifests/examples/monitoring/alertmanager-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/issuer: self-signed
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: alertmanager-auth
    # message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
  labels:
    app: alertmanager
  name: alertmanager
spec:
  rules:
  - host: alertmanager.${ECK_BASE_DOMAIN}
    http:
      paths:
      - backend:
          # This service is created automatically by the operator
          serviceName: alertmanager-operated
          servicePort: web
        path: /
  tls:
  - hosts:
    - alertmanager.${ECK_BASE_DOMAIN}
    secretName: alertmanager-certs
